# slimeda

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/slimeda/: cat_unique_counts.py  corr_map.py  histogram.py  miss_counts.py
tests/: test_cat_unique_counts.py  test_histogram.py  test_misscount.py  test_slimeda.py
