[tool.poetry]
name = "slimeda"
version = "0.1.0"
description = "Slim version of EDA processing Python package"
authors = ["Simon Guo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
